--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,9 @@
       content="width=device-width,
         initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
+integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
+crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
